crates/bc-cli/tests/cli/snapshots/cli__account__archive_existing_account.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Archived account: [ACCOUNT_ID]
----- stderr -----
