crates/bc-cli/tests/cli/snapshots/cli__account__balance_empty.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No account balances.
----- stderr -----
