crates/bc-cli/tests/cli/snapshots/cli__account__balance_filter_by_account.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "balance": "100",
    "commodity": "AUD",
    "id": "[ACCOUNT_ID]",
    "name": "Savings",
    "type": "asset"
  }
]
----- stderr -----
