crates/bc-cli/tests/cli/snapshots/cli__account__balance_lists_sorted_by_type_then_name.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                 | NAME      | TYPE    | BALANCE | COMMODITY 
================================================================================
 [ACCOUNT_ID] | Checking  | Asset   | 40      | AUD       
------------------------------------+-----------+---------+---------+-----------
 [ACCOUNT_ID] | Savings   | Asset   | 100     | AUD       
------------------------------------+-----------+---------+---------+-----------
 [ACCOUNT_ID] | Groceries | Expense | -140    | AUD       
----- stderr -----
