crates/bc-cli/tests/cli/snapshots/cli__account__create_account_json.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "id": "[ACCOUNT_ID]",
  "name": "Bank Savings",
  "account_type": "asset",
  "kind": "deposit_account",
  "commodities": [],
  "description": null,
  "parent_id": null,
  "tag_ids": [],
  "acquisition_date": null,
  "acquisition_cost": null,
  "depreciation_policy": null,
  "created_at": "[TIMESTAMP]",
  "archived_at": null
}
----- stderr -----
