crates/bc-cli/tests/cli/snapshots/cli__account__create_asset_account.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created account: Bank Savings ([ACCOUNT_ID])
----- stderr -----
