crates/bc-cli/tests/cli/snapshots/cli__account__create_nested_path.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created account: Assets:BankA:Checking ([ACCOUNT_ID])
  also created: Assets (Group), Assets:BankA (Group)
----- stderr -----
