crates/bc-cli/tests/cli/snapshots/cli__account__create_nested_path_json.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "account": {
    "account_type": "asset",
    "acquisition_cost": null,
    "acquisition_date": null,
    "archived_at": null,
    "closed_on": null,
    "commodities": [],
    "created_at": "[TIMESTAMP]",
    "depreciation_policy": null,
    "description": null,
    "id": "[ACCOUNT_ID]",
    "kind": "deposit_account",
    "name": "Checking",
    "opened_on": null,
    "parent_id": "[ACCOUNT_ID]",
    "tag_ids": []
  },
  "also_created": [
    "Assets",
    "Assets:BankA"
  ],
  "created": true
}
----- stderr -----
