crates/bc-cli/tests/cli/snapshots/cli__account__create_root_account.snap
---
source: crates/bc-cli/tests/cli/account.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created account: Assets ([ACCOUNT_ID])
----- stderr -----
